--- a/ZarinPalPayment.Api/appsettings.json
+++ b/ZarinPalPayment.Api/appsettings.json
@@ -11,7 +11,7 @@
   },
   "AllowedHosts": "*",
   "GatewayInfo": {
-    "CallBack": "http://redreseller.com/verify",
+    "CallBack": "http://kilo.website/reference",
     "Merchant": "677dd2e4-aa40-413d-bfa7-397528f0c374",
     "Request_Url": "https://api.zarinpal.com/pg/v4/payment/request.json",
     "Verify_Url": "https://api.zarinpal.com/pg/v4/payment/verify.json"
